--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ntohq/buefy-next": "^0.1.2",
     "firebase": "^10.8.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
