--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ntohq/buefy-next": "^0.1.2",
     "firebase": "^10.8.0",
     "pinia": "^2.1.7",
+    "prettier": "^3.2.5",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
