--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "aus-client-query-app",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-regular-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/vue-fontawesome": "^3.0.6",
-    "@ntohq/buefy-next": "^0.1.2",
-    "firebase": "^10.8.0",
-    "pinia": "^2.1.7",
-    "prettier": "^3.2.5",
-    "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.3",
-    "vite": "^5.1.0"
-  }
+	"name": "aus-client-query-app",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "firebase use staging && vite",
+		"build": "firebase use default && vite build --sourcemap=false",
+		"preview": "firebase use staging && vite preview",
+		"build-deploy": "firebase use default && vite build --sourcemap=false && firebase deploy --only hosting",
+		"debug": "firebase use staging && vite --mode development"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.5.1",
+		"@fortawesome/free-brands-svg-icons": "^6.5.1",
+		"@fortawesome/free-regular-svg-icons": "^6.5.1",
+		"@fortawesome/free-solid-svg-icons": "^6.5.1",
+		"@fortawesome/vue-fontawesome": "^3.0.6",
+		"@ntohq/buefy-next": "^0.1.2",
+		"firebase": "^10.8.0",
+		"pinia": "^2.1.7",
+		"prettier": "^3.2.5",
+		"vue": "^3.4.15",
+		"vue-router": "^4.2.5"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-vue": "^5.0.3",
+		"vite": "^5.1.0"
+	}
 }
